src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

body{
  margin: 0px;
}
.calling{
max-width: 1200px;
object-fit: contain;
}

#get-started{
  background-color: #47E4C2; 
  border: none;
  color: black;
  padding: 10px 20px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  margin: 4px 2px;
  cursor: pointer;
  border-radius: 16px;
  font-size: .8em;
  font-family: 'lato', sans-serif;
  font-weight: 400;
}

#get-started:hover{
  background: rgb(57, 184, 157);
}



body, html {
  height: 100%;
}

.hero-all-holder{
  position: relative;
  text-align: center;
  color: white;
}


.hero-image {

  /* background-position: center;
  background-repeat: no-repeat;
  background-size: contain; */
  width: 100%;

}


.hero-text-container{
  /* width: 50%; */
  /* max-width: 50%; */
  background-color: #47E4C2;
  height: 100px;
 
  text-align: left;
  position: absolute;
  top: 60%;
  left: 40%;
  transform: translate(-50%, -50%);
  color: white;
  padding-bottom: 20%;
  
}

.hero-text{
  font-family: 'Lato';
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  font-size: .7em;
  width: 40em;
  padding: 5%;
  margin: 5%;
  

}

.hero-text h1{
  /* font-weight: 300;
  font-size: 1.5em;
  margin-top: 0px;
  margin-bottom: 0px; */
}

.hero-text h4{
  /* font-weight: 400; */
}


.navigator{
  background-color: #212121; 
  color: #47E4C2;
  font-family: 'Lato', sans-serif;
  font-weight: 900;
  height: 2em;
}

.logo-holder{
  width: 100px;


}

.step-holder{
  background-color: blueviolet;
  height: 20px;
}

#how-it-works{
  text-align: center;
}

.blue-box{
  width:80%;
  height:30em;
  background-color: white;
  float: center;
  margin-left: 10%;
  margin-right: 10%;
}

/* .column {
  width: 100%;
 
} */

.card-body{
  float: left;
  width: 25%;
  -webkit-column-width: 300px;
  -moz-column-width: 300px;
  column-width: 300px;
}

.blue-box:after {
  content: "";
  display: table;
  clear: both;
}

.step-description{
  margin-left:15%;
  margin-right:15%;
  margin-top: 10%;

}

.endless-logo{
  max-width: 400px;

}

.Layer_1{
  width: 400px;

}

body {
  /* background-color: lightblue; */
}

@media screen and (min-width: 320) {
  body {
    /* background-color: lightgreen; */
  }
/* 
  .step-description{
    max-width: 300px;
    min-width: 250px;
  } */

  /* .column {
    float: left;
    width: 100%;
  } */

  .blue-box{
    width:100%;
    height:30em;
    background-color: white;
    float: center;
    /* margin-left: 10%;
    margin-right: 10%; */
  }

  .card{
    /* float: left; */
  
    width: 100%;
    /* -webkit-column-width: 300px;
    -moz-column-width: 300px;
    column-width: 300px; */
  }
}

@media screen and (min-width: 800px) {
  body {
    /* background-color: lavender; */
  }
}

